--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -3,6 +3,6 @@
 <head></head>
 <body>
 <div id="root"></div>
-<div>Check invalidation</div>
+<div>Check invalidation Check check</div>
 </body>
 </html>
